--- a/empreso.html
+++ b/empreso.html
@@ -71,7 +71,7 @@
 
         <div class="quadrada">
 
-            <a href="Inicio.html"></href> <img src="imagens/BOTOES/INICIO.png" alt="Inicio"></a>
+            <a href="Index.html"></href> <img src="imagens/BOTOES/INICIO.png" alt="Inicio"></a>
 
         </div>
 
