--- a/Contato.html
+++ b/Contato.html
@@ -61,7 +61,7 @@
 
     <div class="quadrada">
 
-        <a href="Index.html"></href> <img src="imagens/BOTOES/inicio.png" alt="Inicio"></a>
+        <a href="index.html"></href> <img src="imagens/BOTOES/inicio.png" alt="Inicio"></a>
 
     </div>
 </body>
