--- a/time.html
+++ b/time.html
@@ -38,7 +38,7 @@
                 <img src="imagens/RU.png" alt="Juan Cesar">
                 <div class="descricao">
                     <h3>Juan Cesar</h3>
-                    <p>Juan é entusiasta de programação e gosta de resolver problemas complexos.</p>
+                    <p>Juan é entusiasta em relações públicas e gosta de resolver problemas complexos.</p>
                 </div>
             </div>
 
@@ -46,7 +46,7 @@
                 <img src="imagens/SA.webp" alt="Samuel Felicio">
                 <div class="descricao">
                     <h3>Samuel Felicio</h3>
-                    <p>Samuel é criativo e sempre busca novas soluções para projetos inovadores.</p>
+                    <p>Samuel é dedicado e sempre busca soluções criativas para.</p>
                 </div>
             </div>
         </div>
