--- a/Contato.html
+++ b/Contato.html
@@ -5,20 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/LOGOTRANS.png" type="image/x-icon">
-    <link rel="stylesheet" href="Contata.css">
+    <link rel="stylesheet" href="contata.css">
     <title>Nexora</title>
 </head>
 
 <body>
-
     <div class="titulo">
         <h2>FALE CONOSCO</h2>
     </div>
 
-
     <section id="contato">
-
-        <form action="#" method="POST">
+        <form id="formulario">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
 
@@ -45,27 +42,46 @@
             <button class="buto" type="submit">ENVIAR</button>
         </form>
     </section>
-    </div>
 
     <div class="quadrada">
-
-        <a href="foto.html"></href> <img src="imagens/BOTOES/fotos.png" alt="Fotos"></a>
-
+        <a href="foto.html"><img src="imagens/BOTOES/fotos.png" alt="Fotos"></a>
     </div>
 
     <div class="quadrado">
-
         <img src="imagens/Mascobrio.png" alt="Mascote">
-
     </div>
 
     <div class="quadrada">
-
-        <a href="index.html"></href> <img src="imagens/BOTOES/inicio.png" alt="Inicio"></a>
-
+        <a href="index.html"><img src="imagens/BOTOES/inicio.png" alt="Inicio"></a>
     </div>
+
+    <div id="popup" class="popup-overlay">
+        <div class="popup-content">
+            <p>Feedback enviado com sucesso!</p>
+            <button id="popup-ok">OK</button>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; Fevereiro/2025 Nexora. Todos os direitos reservados. | Endereço: São José da Lapa - MG, Rua Antonio
+            Ferreira Saturnino, 390 - Centro.</p>
+    </footer>
+
+    <script>
+        const form = document.getElementById('formulario');
+        const popup = document.getElementById('popup');
+        const okButton = document.getElementById('popup-ok');
+
+        form.addEventListener('submit', function (e) {
+            e.preventDefault();
+            popup.style.display = 'flex';
+            form.reset();
+        });
+
+        okButton.addEventListener('click', function () {
+            popup.style.display = 'none';
+        });
+    </script>
 </body>
-<footer>
-    <p>&copy; Fevereiro/2025 Nexora. Todos os direitos reservados. | Endereço: São José da Lapa - MG, Rua Antonio Ferreira Saturnino, 390 - Centro.</p>
-</footer>
+
 </html>
