--- a/parceiro.html
+++ b/parceiro.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="logo">
-                <img src="imagens/NEXO.png" alt="Logo parceiro" class="logo-principal">
+               <a href="https://www.youtube.com/watch?v=LsI4KaqSZy8"><img src="imagens/NEXO.png" alt="Logo parceiro" class="logo-principal"></a>
             </div>
         </div>
 
